--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,1 +1,115 @@
-/*# sourceMappingURL=style.css.map */
+.titre {
+  background-color: #9356DC;
+}
+
+img {
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
+/******HEADER******/
+.icon-fleche {
+  margin: 17px;
+  display: none;
+}
+
+/******RESERVER MENU******/
+.recherche-restau {
+  width: 100%;
+  /* height: auto;
+  margin: 0 auto; */
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.menu {
+  width: 60%;
+  margin: 0 auto;
+  text-align: center;
+  font-size: 26px;
+  margin-bottom: 20px;
+}
+
+.restau {
+  width: 70%;
+  margin: 0 auto;
+  font-size: 20px;
+  text-align: center;
+  margin-bottom: 20px;
+}
+
+.button {
+  /* color: white; */
+  /* background-color: #9747FF; */
+  border-radius: 25px;
+  height: 50px;
+  border: transparent;
+  margin: 0 auto;
+  width: 218px;
+  margin-bottom: 30px;
+  box-shadow: 0px 4px 10px 0px rgba(0, 0, 0, 0.2509803922);
+  background: linear-gradient(#FF79DA, #9356DC);
+}
+
+/***** FONCTIONNEMENT*/
+.fonctionnement {
+  background-color: white;
+  height: 350px;
+}
+
+.fonctionnement h1 {
+  padding-top: 40px;
+  padding-left: 15px;
+  padding-bottom: 20px;
+}
+
+.choix-fonctionnement {
+  padding-left: 15px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.choix {
+  display: flex;
+  justify-content: space-around;
+  color: black;
+  background-color: var(--grey-color);
+  border-radius: 25px;
+  height: 50px;
+  border: transparent;
+  align-items: center;
+  width: 335px;
+  margin-bottom: 30px;
+  box-shadow: 0px 4px 10px 0px rgba(0, 0, 0, 0.2509803922);
+}
+
+/******RESTAURANT********/
+.restaurants h1 {
+  margin-top: 30px;
+  margin-bottom: 30px;
+}
+
+.menu-restautants {
+  /* width: 100%; */
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
+  justify-content: space-around;
+}
+
+article {
+  /* width: 100%; */
+  margin: 10px 20px 10px 20px;
+}
+
+.card_lien {
+  text-decoration: none;
+}
+
+.plat {
+  width: 100%;
+  height: 136px;
+  border-radius: 15px;
+}/*# sourceMappingURL=style.css.map */
