--- a/sass/main.css
+++ b/sass/main.css
@@ -15,7 +15,8 @@ a {
 }
 
 img {
-  object-fit: cover;
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 
 h1 {
@@ -540,6 +541,4 @@ body {
     order: 5;
     margin: 0px 0px 7px 20px;
   }
-}
-
-/*# sourceMappingURL=style.css.map */
+}/*# sourceMappingURL=main.css.map */
