--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -8,6 +8,7 @@
 body{
     margin: 0px;
     padding: 0px;
+    box-sizing: border-box;
     color: $black;
     @include roboto;
 }
@@ -18,6 +19,7 @@ a{
 
 img{
     object-fit: cover;
+    
 }
 
 h1{
