--- a/sass/compoments/_icones.scss
+++ b/sass/compoments/_icones.scss
@@ -6,6 +6,7 @@
     //affiché au début
     opacity:1 ;
     position: absolute;
+    font-size: 25px;
     
   }
   .heart-full{
@@ -16,6 +17,7 @@
     // -webkit-background-clip: text;
     // -webkit-text-fill-color: transparent;
     position: absolute;
+    font-size: 25px;
   }
 
   .card__icon{
