--- a/sass/main.css
+++ b/sass/main.css
@@ -218,6 +218,7 @@ body {
 }
 
 .elem-menu {
+  opacity: 0;
   height: 69px;
   padding-left: 15px;
   border-radius: 15px;
@@ -228,7 +229,6 @@ body {
   align-items: center;
   overflow: hidden;
   position: relative;
-  opacity: 0;
   animation: anim 1s linear forwards;
 }
 @keyframes anim {
@@ -247,9 +247,7 @@ body {
 }
 .elem-menu:hover .elem-menu__check {
   opacity: 1;
-  animation-name: coche2;
-  right: 0px;
-  transition-timing-function: ease-out;
+  animation: coche2 1s ease forwards;
 }
 @keyframes coche2 {
   0% {
@@ -309,7 +307,7 @@ body {
   -webkit-text-fill-color: transparent;
 }
 .elem-menu__nom {
-  margin-bottom: 0px;
+  margin-bottom: 9px;
 }
 .elem-menu__descript {
   padding-bottom: 10px;
@@ -433,6 +431,7 @@ body {
 .heart-empty {
   opacity: 1;
   position: absolute;
+  font-size: 25px;
 }
 
 .heart-full {
@@ -441,6 +440,7 @@ body {
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
   position: absolute;
+  font-size: 25px;
 }
 
 .card__icon {
