Modifications apportées à la flèche, l'ombre du header,fond de couleur du titre, titre sur deux lignes, les paragraphes centrés dans Fonctionnement et l'ellipsis du h3 et p au survol des plats pour mobile

--- a/sass/abstracts/_mixins.scss
+++ b/sass/abstracts/_mixins.scss
@@ -47,7 +47,9 @@
 
 
 @mixin btn-shadow{
-    box-shadow: 0px 4px 10px 0px #00000069;
+    box-shadow: 0px 4px 10px 0px #00000040;
+
+    // box-shadow: 0px 4px 10px 0px #00000069;
     
 }
 @mixin icon-hover{
