--- a/sass/base/_code-base.scss
+++ b/sass/base/_code-base.scss
@@ -36,7 +36,7 @@ body{
     }
 } 
 
-@keyframes spin { // Définit l'animation nommée "spin" avec des étapes clés pour faire tourner l'élément sur lui-même.
+@keyframes spin { // Définit l'animation de rotation nommée "spin" avec des étapes clés pour faire tourner l'élément du loader sur lui-même.
     0%{ 
         transform: rotate(0deg);
     }
@@ -48,15 +48,20 @@ body{
 
 .infoGroup{
     @include flex-col-cent;
+    background-color: $greylight-color; 
+    padding-bottom: 40px;
     &__title{
-        width: 60%;
+        width: 70%;
         text-align: center;
-        font-size: 30px;
+        font-size: 24px;
         font-weight: 700;
-        @include roboto;  
+        padding-top: 20px;
+        @include roboto; 
+        
+
     }
     &__info{
-        width: 60%;
+        width: 70%;
         text-align: center;
         margin-bottom: 30px;
     }
@@ -87,7 +92,8 @@ body{
         margin-top: 30px;
         
         &__choix{
-            @include flex-start;
+            @include flex-center;
+            gap: 20px;
             background-color:$greylight-color;
             border-radius: 20px;
             margin-bottom: 25px;
@@ -102,8 +108,20 @@ body{
         }
             
         &__p, &__i{
-                
+                           
             @include margin-left;
+                
+        }
+        &__p{
+            font-weight: 500;
+        }
+        &__i{
+            position: absolute;
+            left: 5px; 
+            @media (min-width:1024px){
+               position: relative;
+            }                 
+            
                 
         }
         &__choix:nth-of-type(1):hover{
@@ -130,6 +148,8 @@ body{
 }
 
 .restaurant{
+    background-color: $greylight-color; 
+    
     &__h2{
         font-size: 24px;
     }
