--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -1,17 +1,33 @@
 //Fichiers sass de styles spécifiques 
 //header accueil
 .header{ 
+        
         &__logo{
             @include flex-center;
             background-color: $white-color;
             width: 100%;
             height: 63px;
+            box-shadow: 0px 2px 4px 0px #00000026;
+
+            
+           
+
+            
         }
         &__location{
             width: 100%;
             height: 40px;
             @include flex-center;
             background-color: $grey-color;
+            // @include btn-shadow;
+            box-shadow: 0px 4px 10px 0px #00000040;
+            position: relative;
+            
+
+
+            @media (min-width:1024px){
+                box-shadow: none;;
+            }
         }
             &__fa-solid{
                 margin-left: 60px;
@@ -38,7 +54,9 @@
     @include flex-start;
 
     &__icon{
-        margin-left: 20px
+        margin-left: 20px;
+        font-size: 20px;
+        
     }
     &__title{
         margin: 0 auto;
